--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -41,7 +41,8 @@
         <Button x:Name="btnMultiplication" Content="*" Grid.Row="2" Grid.Column="3" FontSize="20" Margin="2" Click="operationButton_Click"/>
         <Button x:Name="btnSum" Content="+" Grid.Row="3" Grid.Column="4" FontSize="20" Margin="2" Click="operationButton_Click"/>
         <Button x:Name="btnSubtraction" Content="-" Grid.Row="4" Grid.Column="3" FontSize="20" Margin="2" Click="operationButton_Click"/>
-        <Button x:Name="btnEquals" Content="=" Grid.Row="5" Grid.Column="2" FontSize="20" Margin="2" Grid.ColumnSpan="2" Click="btnEquals_Click"/>
+        <Button x:Name="btnSQRT" Content="SQRT" Grid.Row="5" Grid.Column="2" FontSize="20" Margin="2"  Click="btnSQRT_Click"/>
+        <Button x:Name="btnEquals" Content="=" Grid.Row="5" Grid.Column="3" FontSize="20" Margin="2"  Click="btnEquals_Click"/>
         <Button x:Name="btnBack" Content="←" Grid.Row="1" Grid.Column="0" FontSize="20" Margin="2" Click="btnBack_Click"/>
         <Button x:Name="btnClearEntry" Content="CE" Grid.Row="1" Grid.Column="1" FontSize="20" Margin="2" Click="btnClearEntry_Click"/>
         <Button x:Name="btnClearAll" Content="C" Grid.Row="1" Grid.Column="2" FontSize="20" Margin="2" Click="btnClearAll_Click"/>
