--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:WPFCalc"
         mc:Ignorable="d"
         Title="WPF Calculator" 
-        Height="400" 
-        Width="280" 
+        MinHeight="265" 
+        MinWidth="250" 
         PreviewTextInput="Window_PreviewTextInput" 
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" Height="400" Width="250">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
